# gmao_mitgcm_coupling

./: README.md  readme.txt
DYAMOND/: DYAMOND_c1440_llc2160_readme.txt  readme.txt
IAU/: IAU_coupled.txt  readme.txt  readme2.txt  working2.sh
IAU/code/: packages.conf  seaice_save4gmao.F
IAU/input/: data.diagnostics_seaice_iau  data.iau_seaice
IAU/seaice/: ecco_iau_seaice.f  ecco_iau_seaice3.f  readme.txt
geos_bulkformulae/1D_ocean_ice_column/: readme_macos.txt
geos_bulkformulae/1D_ocean_ice_column/input/: data.exf  data.pkg
geos_bulkformulae/compare_bulkformulae/: readme.txt  readme_macos.txt
geos_bulkformulae/compare_bulkformulae/code/: DIAGNOSTICS_SIZE.h  EXF_OPTIONS.h_GEOS  EXF_OPTIONS.h_yeager04  EXF_OPTIONS.h_yeager09  SIZE.h  SIZE_f90.h  ZCSUB.F90_Charnok1  ZCSUB.F90_Charnok2  exf_geos_bulkf.F  packages.conf
geos_bulkformulae/compare_bulkformulae/input/: data  data.cal  data.diagnostics  data.exf  data.pkg  gendata.m  lookat_output.m  plot_fig1.m  plot_fig2.m  plot_fig3.m  (+3 more)
geos_bulkformulae/global_ocean.cs32x15/: README.md  readme_macos.txt
geos_c1440_tools/: README.md  pyproject.toml
geos_c1440_tools/examples/: example_regrid_and_plot.py
geos_c1440_tools/geos_c1440_tools/: __init__.py  cli.py  download.py  io.py  plot.py  regrid.py
geos_c1440_tools/tests/: test_imports.py
instructions/: checkout_geosmitv11.7.0.txt  checkout_geosmitv11.7.0_c180.txt  checkout_geosmitv11.7.0_c90.txt  run_c180_llc270_01.txt  run_c90_llc90_02_optimized.txt
notebooks/: 01_Download_data_from_NASA_portal.ipynb  02_Dyamond_regridding_c1440.ipynb  README.md
(+4 files in other folders)
